--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UKNS IT-Premium Services Leipzig - Ihre IT-Experten</title>
-    <meta name="description" content="UKNS IT-Premium Services Leipzig: Professionelle IT-Dienstleistungen, Support, Sicherheit und KI-Lösungen für Unternehmen in Leipzig und Umgebung.">
+    <title>UKNS It Dienstleistleister für IT-Service & Computer Reparatur Leipzig</title>
+    <meta name="description" content="UKNS IT Services Leipzig: Professionelle IT-Dienstleistungen,IT Support, Computer Reparatur Leipzig, Sicherheit und KI-Lösungen für Unternehmen in Leipzig und Umgebung.">
     
     <script src="https://cdn.tailwindcss.com"></script>
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/alpinejs/3.13.5/cdn.min.js"></script>
